--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -314,7 +314,20 @@
       "Epoch 7/100\n",
       "1/1 [==============================] - 5s 5s/step - loss: 1.0429 - accuracy: 0.3429\n",
       "Epoch 8/100\n",
-      "1/1 [==============================] - 5s 5s/step - loss: 0.8627 - accuracy: 0.3905\n"
+      "1/1 [==============================] - 5s 5s/step - loss: 0.8627 - accuracy: 0.3905\n",
+      "Epoch 9/100\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.7893 - accuracy: 0.3125\n",
+      "Epoch 10/100\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.6932 - accuracy: 0.4199\n",
+      "Epoch 11/100\n",
+      "1/1 [==============================] - 5s 5s/step - loss: 0.6387 - accuracy: 0.8095\n",
+      "Epoch 12/100\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.6199 - accuracy: 0.6934\n",
+      "Epoch 13/100\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.6136 - accuracy: 0.6680\n",
+      "Epoch 14/100\n",
+      "1/1 [==============================] - 14s 14s/step - loss: 0.6173 - accuracy: 0.6621\n",
+      "Epoch 15/100\n"
      ]
     }
    ],
