--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -235,7 +235,7 @@
     "                        validation_data=val_generator,\n",
     "                        validation_steps=(176 // BATCH_SIZE),  #12\n",
     "                        class_weight=None,  #不要这个,\n",
-    "                        callbacks=[TensorBoard(log_dir=LOG_DIR, profile_batch=5, histogram_freq=1), hp.KerasCallback(run_dir, hparams)]\n",
+    "                        callbacks=[TensorBoard(log_dir=run_dir, profile_batch=5, histogram_freq=1), hp.KerasCallback(run_dir, hparams)]\n",
     "                        )\n",
     "    # 在测试集上评估\n",
     "    scores = model.evaluate_generator(test_generator)\n",
@@ -251,14 +251,28 @@
    "outputs": [],
    "source": [
     "# 超参数运行\n",
-    "def run(run_dir, hparams):\n",
-    "    with tf.summary.create_file_writer(run_dir).as_default():\n",
-    "        hp.hparams(hparams)  # record the values used in this trial\n",
-    "        hp.hparams_config(\n",
-    "                hparams=[HP_NUM_UNITS, HP_OPTIMIZER],\n",
-    "                metrics=[hp.Metric(METRIC_ACCURACY, display_name='Accuracy')],\n",
+    "# def run(run_dir, hparams):\n",
+    "#     with tf.summary.create_file_writer(run_dir).as_default():\n",
+    "#         hp.hparams(hparams)  # record the values used in this trial\n",
+    "#         hp.hparams_config(\n",
+    "#                 hparams=[HP_NUM_UNITS, HP_OPTIMIZER],\n",
+    "#                 metrics=[hp.Metric(METRIC_ACCURACY, display_name='Accuracy')],\n",
+    "#         )\n",
+    "#         start_transfer_learning(hparams)\n",
+    "session_num = 0\n",
+    "for num_units in HP_NUM_UNITS.domain.values:\n",
+    "    for optimizer in HP_OPTIMIZER.domain.values:\n",
+    "        run_name = \"run-%d\" % session_num\n",
+    "        print('--- Starting trial: %s' % run_name)\n",
+    "        print({h.name: hparams[h] for h in hparams})\n",
+    "        start_transfer_learning(\n",
+    "                LOG_DIR + run_name,\n",
+    "                {\n",
+    "                        HP_NUM_UNITS: num_units,\n",
+    "                        HP_OPTIMIZER: optimizer,\n",
+    "                }\n",
     "        )\n",
-    "        start_transfer_learning(hparams)\n",
+    "        session_num += 1\n",
     "\n",
     "# # 拟合模型\n",
     "# history_tl = model.fit_generator(generator=train_generator,\n",
