--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -20,13 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-06 21:26:53.328618: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-01-07 00:16:17.098657: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
     "## 导入 Inceptionv3 模型\n",
     "from keras.applications.inception_v3 import InceptionV3, preprocess_input\n",
     "\n",
-    "## 导入建立神经网络的基本模块\n",
+    "# 导入建立神经网络的基本模块\n",
     "from keras.preprocessing import image\n",
     "from keras.models import Model\n",
     "from keras.layers import Dense, GlobalAveragePooling2D\n",
@@ -43,7 +43,7 @@
     "from keras.optimizers import *\n",
     "from keras.losses import categorical_crossentropy\n",
     "\n",
-    "## 导入数据增强模块\n",
+    "# 导入数据增强模块\n",
     "import cv2\n",
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "\n",
@@ -56,7 +56,10 @@
     "# from keras_visualizer import visualizer\n",
     "# from IPython.display import Image, SVG, display\n",
     "from keras.callbacks import TensorBoard\n",
-    "import datetime\n"
+    "import datetime\n",
+    "\n",
+    "# zha早停\n",
+    "from keras.callbacks import EarlyStopping\n"
    ],
    "metadata": {
     "collapsed": false
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "DATASET_PATH_ROOT = '/data/DataSets/TWITTER_IMG_SENT_2015/dataset/'\n",
@@ -81,7 +84,7 @@
     "OUT_LOG_PATH = OUT_PATH_ROOT + 'logs/'\n",
     "\n",
     "BATCH_SIZE = 512\n",
-    "TOTAL_EPOCH = 100"
+    "TOTAL_EPOCH = 300"
    ],
    "metadata": {
     "collapsed": false
@@ -98,15 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "HP_NUM_UNITS = hp.HParam('num_units', hp.Discrete([512, 1024]))\n",
     "# HP_DROPOUT = hp.HParam('dropout', hp.RealInterval(0.1, 0.2))\n",
     "HP_OPTIMIZER = hp.HParam('optimizer', hp.Discrete(['adam', 'sgd']))\n",
-    "\n",
-    "METRIC_ACCURACY = 'accuracy'\n",
-    "\n"
+    "HP_L_RATE = hp.HParam('learning_rate', hp.Discrete([0.001, 0.0001]))\n",
+    "METRIC_ACCURACY = 'accuracy'"
    ],
    "metadata": {
     "collapsed": false
@@ -123,14 +125,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Found 617 images belonging to 2 classes.\n",
-      "Found 176 images belonging to 2 classes.\n"
+      "Found 176 images belonging to 2 classes.\n",
+      "Found 89 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -195,7 +198,7 @@
    ],
    "source": [
     "# 输出日志\n",
-    "LOG_DIR = OUT_LOG_PATH + 'hparam_tuning/'\n",
+    "LOG_DIR = OUT_LOG_PATH + 'hparam_tuning/' + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\") + '/'\n",
     "os.environ['TENSORBOARD_BINARY'] = '/usr/local/miniconda3/envs/TensorFlow/bin/tensorboard'\n",
     "\n",
     "# @formatter:off\n",
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def start_transfer_learning(run_dir, hparams):\n",
@@ -228,18 +231,46 @@
     "        layer.trainable = False\n",
     "\n",
     "    # 编译模型\n",
-    "    model.compile(optimizer=hparams[HP_OPTIMIZER], loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
+    "    if hparams[HP_OPTIMIZER] == \"adam\":\n",
+    "        optimizer = Adam(learning_rate=hparams[HP_L_RATE])\n",
+    "    elif hparams[HP_OPTIMIZER] == \"sgd\":\n",
+    "        optimizer = SGD(learning_rate=hparams[HP_L_RATE])\n",
+    "    else:\n",
+    "        raise ValueError(\"unexpected optimizer name\")\n",
+    "    model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])  # rmsprop\n",
+    "\n",
+    "    # 训练\n",
     "    model.fit_generator(generator=train_generator,\n",
     "                        steps_per_epoch=(617 // BATCH_SIZE),  #800\n",
-    "                        epochs=TOTAL_EPOCH,  #2\n",
+    "                        epochs=TOTAL_EPOCH,\n",
     "                        validation_data=val_generator,\n",
-    "                        validation_steps=(176 // BATCH_SIZE),  #12\n",
+    "                        # validation_steps=(176 // BATCH_SIZE),\n",
+    "                        validation_freq=10,\n",
     "                        class_weight=None,  #不要这个,\n",
-    "                        callbacks=[TensorBoard(log_dir=run_dir, profile_batch=5, histogram_freq=1), hp.KerasCallback(run_dir, hparams)]\n",
+    "                        callbacks=\n",
+    "                        [\n",
+    "                                TensorBoard(log_dir=run_dir),\n",
+    "                                hp.KerasCallback(run_dir, hparams),\n",
+    "                                EarlyStopping(monitor='val_acc', patience=10)  # 早停选项val_acc\n",
+    "                        ],\n",
+    "                        # workers=1,\n",
     "                        )\n",
-    "    # 在测试集上评估\n",
-    "    scores = model.evaluate_generator(test_generator)\n",
-    "    return scores\n"
+    "    # 在测试集上评估 profile_batch=5, histogram_freq=1\n",
+    "    # scores = model.evaluate_generator(test_generator)\n",
+    "\n",
+    "    # 保存\n",
+    "    model.save(f'{run_dir}/Twitter2015_iv3_tl.h5')\n",
+    "\n",
+    "    # return scores\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 超参数调整"
    ],
    "metadata": {
     "collapsed": false
@@ -248,46 +279,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-07 00:16:22.052894: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.061548: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.063221: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.065119: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-01-07 00:16:22.065768: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.067395: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.068910: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.877932: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.879565: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.881070: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-01-07 00:16:22.882474: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
+     ]
+    }
+   ],
    "source": [
     "# 超参数运行\n",
-    "# def run(run_dir, hparams):\n",
-    "#     with tf.summary.create_file_writer(run_dir).as_default():\n",
-    "#         hp.hparams(hparams)  # record the values used in this trial\n",
-    "#         hp.hparams_config(\n",
-    "#                 hparams=[HP_NUM_UNITS, HP_OPTIMIZER],\n",
-    "#                 metrics=[hp.Metric(METRIC_ACCURACY, display_name='Accuracy')],\n",
-    "#         )\n",
-    "#         start_transfer_learning(hparams)\n",
-    "session_num = 0\n",
-    "for num_units in HP_NUM_UNITS.domain.values:\n",
-    "    for optimizer in HP_OPTIMIZER.domain.values:\n",
-    "        run_name = \"run-%d\" % session_num\n",
-    "        print('--- Starting trial: %s' % run_name)\n",
-    "        print({h.name: hparams[h] for h in hparams})\n",
-    "        start_transfer_learning(\n",
-    "                LOG_DIR + run_name,\n",
-    "                {\n",
-    "                        HP_NUM_UNITS: num_units,\n",
-    "                        HP_OPTIMIZER: optimizer,\n",
-    "                }\n",
-    "        )\n",
-    "        session_num += 1\n",
+    "def run_hparams():\n",
+    "    session_num = 0\n",
+    "    for num_units in HP_NUM_UNITS.domain.values:\n",
+    "        for optimizer in HP_OPTIMIZER.domain.values:\n",
+    "            for learning_rate in HP_L_RATE.domain.values:\n",
+    "                start_transfer_learning(\n",
+    "                        LOG_DIR + f'run-{session_num}',\n",
+    "                        {\n",
+    "                                HP_NUM_UNITS: num_units,\n",
+    "                                HP_OPTIMIZER: optimizer,\n",
+    "                                HP_L_RATE   : learning_rate,\n",
+    "                        }\n",
+    "                )\n",
+    "                session_num += 1\n",
     "\n",
-    "# # 拟合模型\n",
-    "# history_tl = model.fit_generator(generator=train_generator,\n",
-    "#                                  steps_per_epoch=(617 // BATCH_SIZE),  #800\n",
-    "#                                  epochs=TOTAL_EPOCH,  #2\n",
-    "#                                  validation_data=val_generator,\n",
-    "#                                  validation_steps=(176 // BATCH_SIZE),  #12\n",
-    "#                                  class_weight=None,  #不要这个,\n",
-    "#                                  callbacks=[TensorBoard(log_dir=log_dir, profile_batch=5, histogram_freq=1)]\n",
-    "#                                  )\n",
-    "# # 保存\n",
-    "# model.save(f'{OUT_PATH_ROOT}Twitter2015_iv3_tl.h5')"
+    "\n",
+    "run_hparams()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
