--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -295,7 +295,44 @@
       "2023-01-07 00:16:22.877932: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
       "2023-01-07 00:16:22.879565: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
       "2023-01-07 00:16:22.881070: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-01-07 00:16:22.882474: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n"
+      "2023-01-07 00:16:22.882474: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30964 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:00:08.0, compute capability: 7.0\n",
+      "/tmp/ipykernel_24394/86911547.py:26: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "  model.fit_generator(generator=train_generator,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/300\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-07 00:16:51.096283: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8401\n",
+      "2023-01-07 00:16:51.921016: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - ETA: 0s - loss: 0.9337 - accuracy: 0.3359WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - 28s 28s/step - loss: 0.9337 - accuracy: 0.3359\n",
+      "Epoch 2/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.7040 - accuracy: 0.6571WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - 6s 6s/step - loss: 0.7040 - accuracy: 0.6571\n",
+      "Epoch 3/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.7792 - accuracy: 0.6286WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7792 - accuracy: 0.6286\n",
+      "Epoch 4/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.7767 - accuracy: 0.6571WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - 2s 2s/step - loss: 0.7767 - accuracy: 0.6571\n",
+      "Epoch 5/300\n",
+      "1/1 [==============================] - ETA: 0s - loss: 0.6839 - accuracy: 0.6641WARNING:tensorflow:Early stopping conditioned on metric `val_acc` which is not available. Available metrics are: loss,accuracy\n",
+      "1/1 [==============================] - 11s 11s/step - loss: 0.6839 - accuracy: 0.6641\n"
      ]
     }
    ],
